@@ -1,7 +1,8 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996	Robert Gentleman and Ross Ihaka
- *  Copyright (C) 2000--2006	The R Development Core Team.
+ *  Copyright (C) 2000--2012	The R Development Core Team
+ *  Copyright (C) 2001--2012	The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -132,13 +133,10 @@ static void MatrixRowLabel(SEXP rl, int i, int rlabw, int lbloff)
 static void printLogicalMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 			       SEXP rl, SEXP cl, const char *rn, const char *cn)
 {
-    int *x;
-
 /* initialization; particularly of row labels, rl= dimnames(.)[[1]] and
  * rn = names(dimnames(.))[1] : */
 #define _PRINT_INIT_rl_rn				\
-    SEXP sw;						\
-    int *w;						\
+    int *w = (int *) R_alloc(c, sizeof(int));		\
     int width, rlabw = -1, clabw = -1; /* -Wall */	\
     int i, j, jmin = 0, jmax = 0, lbloff = 0;		\
 							\
@@ -158,10 +156,8 @@ static void printLogicalMatrix(SEXP sx, int offset, int r_pr, int r, int c,
     }
 
     _PRINT_INIT_rl_rn;
+    int *x = LOGICAL(sx) + offset;
 
-    sw = allocVector(INTSXP, c);
-    x = LOGICAL(sx) + offset;
-    w = INTEGER(sw);
     /* compute w[j] = column-width of j(+1)-th column : */
     for (j = 0; j < c; j++) {
 	formatLogical(&x[j * r], r, &w[j]);
@@ -230,13 +226,9 @@ static void printLogicalMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 static void printIntegerMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 			       SEXP rl, SEXP cl, const char *rn, const char *cn)
 {
-    int *x;
-
     _PRINT_INIT_rl_rn;
+    int *x = INTEGER(sx) + offset;
 
-    sw = allocVector(INTSXP, c);
-    x = INTEGER(sx) + offset;
-    w = INTEGER(sw);
     for (j = 0; j < c; j++) {
 	formatInteger(&x[j * r], r, &w[j]);
 	_PRINT_SET_clabw;
@@ -271,19 +263,11 @@ static void printIntegerMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 static void printRealMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 			    SEXP rl, SEXP cl, const char *rn, const char *cn)
 {
-    SEXP sd, se;
-    double *x;
-    int *d, *e;
     _PRINT_INIT_rl_rn;
+    double *x = REAL(sx) + offset;
 
-    PROTECT(sd = allocVector(INTSXP, c));
-    PROTECT(se = allocVector(INTSXP, c));
-    sw = allocVector(INTSXP, c);
-    UNPROTECT(2);
-    x = REAL(sx) + offset;
-    d = INTEGER(sd);
-    e = INTEGER(se);
-    w = INTEGER(sw);
+    int *d = (int *) R_alloc(c, sizeof(int)),
+	*e = (int *) R_alloc(c, sizeof(int));
 
     for (j = 0; j < c; j++) {
 	formatReal(&x[j * r], r, &w[j], &d[j], &e[j], 0);
@@ -319,27 +303,15 @@ static void printRealMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 static void printComplexMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 			       SEXP rl, SEXP cl, const char *rn, const char *cn)
 {
-    SEXP sdr, ser, swr, sdi, sei, swi;
-    Rcomplex *x;
-    int *dr, *er, *wr, *di, *ei, *wi;
     _PRINT_INIT_rl_rn;
+    Rcomplex *x = COMPLEX(sx) + offset;
 
-    PROTECT(sdr = allocVector(INTSXP, c));
-    PROTECT(ser = allocVector(INTSXP, c));
-    PROTECT(swr = allocVector(INTSXP, c));
-    PROTECT(sdi = allocVector(INTSXP, c));
-    PROTECT(sei = allocVector(INTSXP, c));
-    PROTECT(swi = allocVector(INTSXP, c));
-    PROTECT(sw	= allocVector(INTSXP, c));
-    UNPROTECT(7);
-    x = COMPLEX(sx) + offset;
-    dr = INTEGER(sdr);
-    er = INTEGER(ser);
-    wr = INTEGER(swr);
-    di = INTEGER(sdi);
-    ei = INTEGER(sei);
-    wi = INTEGER(swi);
-    w = INTEGER(sw);
+    int *dr = (int *) R_alloc(c, sizeof(int)),
+	*er = (int *) R_alloc(c, sizeof(int)),
+	*wr = (int *) R_alloc(c, sizeof(int)),
+	*di = (int *) R_alloc(c, sizeof(int)),
+	*ei = (int *) R_alloc(c, sizeof(int)),
+	*wi = (int *) R_alloc(c, sizeof(int));
 
     /* Determine the column widths */
 
@@ -388,12 +360,9 @@ static void printStringMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 			      int quote, int right, SEXP rl, SEXP cl,
 			      const char *rn, const char *cn)
 {
-    SEXP *x;
     _PRINT_INIT_rl_rn;
+    SEXP *x = STRING_PTR(sx)+offset;
 
-    sw = allocVector(INTSXP, c);
-    x = STRING_PTR(sx)+offset;
-    w = INTEGER(sw);
     for (j = 0; j < c; j++) {
 	formatString(&x[j * r], r, &w[j], quote);
 	_PRINT_SET_clabw;
@@ -434,12 +403,9 @@ static void printStringMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 static void printRawMatrix(SEXP sx, int offset, int r_pr, int r, int c,
 			   SEXP rl, SEXP cl, const char *rn, const char *cn)
 {
-    Rbyte *x;
     _PRINT_INIT_rl_rn;
+    Rbyte *x = RAW(sx) + offset;
 
-    sw = allocVector(INTSXP, c);
-    x = RAW(sx) + offset;
-    w = INTEGER(sw);
     for (j = 0; j < c; j++) {
 	formatRaw(&x[j * r], r, &w[j]);
 	_PRINT_SET_clabw;
